tests/ui/cfg/invalid-cli-cfg-pred.rs
//@ compile-flags: --cfg foo=1x

fn main() {}

//~? ERROR invalid `--cfg` argument
